PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.7
- PDO DBlib:
  . Fixed bug #54329 (MSSql extension memory leak).
    (dotslashpok at gmail dot com)

30 Jun 2011, PHP 5.3.7 RC2
- Core:
  . Fixed crash in error_log(). (Felipe) Reported by Mateusz Kocielski.
  . Fixed bug #55082 (var_export() doesn't escape properties properly).
    (Gustavo)

- DateTime extension:
  . Fixed bug where the DateTime object got changed while using date_diff().
    (Derick)

- DBA extension:
  . Supress warning on non-existent file open with Berkeley DB 5.2 (Chris Jones)
    
- PDO ODBC driver:
  . Fixed data type usage in 64bit. (leocsilva at gmail dot com)

- PHP-FPM SAPI:
  . Implemented FR #54577 (Enhanced status page with full status and details
    about each processes. Also provide a web page (status.html) for
    real-time FPM status. (fat)
  . Fixed missing Expires and Cache-Control headers for ping and status pages.
    (fat)
  . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
  . Implemented FR #54172 (Overriding the pid file location of php-fpm). (fat)

- SPL extension:
  . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
    on true). (Pierrick)

16 Jun 2011, PHP 5.3.7 RC1
- Upgraded bundled SQLite to version 3.7.6.3. (Scott)
- Upgraded bundled PCRE to version 8.12. (Scott)
- Increased the backtrack limit from 100000 to 1000000 (Rasmus)

- Zend Engine:
  . Fixed bug #55007 (compiler fail after previous fail). (Felipe)
  . Fixed bug #54910 (Crash when calling call_user_func with unknown function
    name). (Dmitry)
  . Fixed bug #54804 (__halt_compiler and imported namespaces).
    (Pierrick, Felipe)
  . Fixed bug #54624 (class_alias and type hint). (Felipe)
  . Fixed bug #54585 (track_errors causes segfault). (Dmitry)